--- a/_templates/global/sortTable.js.html
+++ b/_templates/global/sortTable.js.html
@@ -19,6 +19,9 @@ function sortTable(n, tableId) {
       /*Get the two elements you want to compare,
       one from current row and one from the next:*/
       x = rows[i].getElementsByTagName("TD")[n];
+      if (/^P[0-9]$/.test(x.innerHTML)) {
+          x.innerHTML = 'P0'+x.innerHTML[x.innerHTML.length-1];
+      }
       y = rows[i + 1].getElementsByTagName("TD")[n];
       /*check if the two rows should switch place,
       based on the direction, asc or desc:*/
