--- a/_templates/global/sortTable.js.html
+++ b/_templates/global/sortTable.js.html
@@ -20,9 +20,12 @@ function sortTable(n, tableId) {
       one from current row and one from the next:*/
       x = rows[i].getElementsByTagName("TD")[n];
       if (/^P[0-9]$/.test(x.innerHTML)) {
-          x.innerHTML = 'P0'+x.innerHTML[x.innerHTML.length-1];
+        x.innerHTML = 'P0'+x.innerHTML[x.innerHTML.length-1];
       }
       y = rows[i + 1].getElementsByTagName("TD")[n];
+      if (/^P[0-9]$/.test(x.innerHTML)) {
+        x.innerHTML = 'P0'+x.innerHTML[x.innerHTML.length-1];
+      }
       /*check if the two rows should switch place,
       based on the direction, asc or desc:*/
       if (dir == "asc") {
